# nta-pmi-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.githooks/: pre-commit
docs/: architecture.md
docs/build-journal/: 2026-05-11.md
docs/prompt-log/: 2026-05-11-001-schemas-and-scaffolding.md  2026-05-11-002-spec-analyser.md  2026-05-11-003-historical-analyst.md  2026-05-11-004-recommendation-and-orchestrator.md  2026-05-11-005-validation-grid.md  2026-05-11-006-streamlit-ui.md  2026-05-11-007-ground-truth-refinement.md  README.md
src/pmi_agent/: __init__.py  audit.py  docx_loader.py  llm.py  orchestrator.py  rendering.py  schemas.py  validation.py
src/pmi_agent/agents/: historical_analyst.py  recommendation.py  spec_analyser.py
src/pmi_agent/cli/: historical_analyse.py  report.py  spec_analyse.py  ui.py  validate.py
src/pmi_agent/data/: historical_seed.json  seed_loader.py
src/pmi_agent/ui/: app.py  pdf.py
tests/: test_audit.py  test_docx_loader.py  test_recommendation_bundle.py  test_rendering.py  test_schemas.py  test_seed_loader.py  test_validation.py
